# githubq

./: README.org  pyproject.toml
githubq/: __main__.py
tests/: test_githubr.py
